--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/tasks/taskBoxDetails.xhtml
@@ -28,7 +28,7 @@
         <p:column headerText="#{msgs.prioritaet}">
             <h:outputText value="#{item.priority}"
                           rendered="#{item.priority!=10}"/>
-            <h:outputText value="#{msgs.korrektur}"
+            <h:outputText value="#{msgs.correction}"
                           rendered="#{item.priority==10}"/>
         </p:column>
         <p:column headerText="#{msgs.status}">
