--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/usergroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/usergroupList.xhtml
@@ -24,7 +24,7 @@
                  rows="#{LoginForm.myBenutzer.tableSize}"
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
-        <p:column headerText="#{msgs.benutzergruppe}">
+        <p:column headerText="#{msgs.userGroup}">
             <h:outputText value="#{item.title}"/>
         </p:column>
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
