--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditProjectsPopup.xhtml
@@ -20,26 +20,26 @@
     <f:view locale="#{SpracheForm.locale}">
         <h:body>
             <!-- edit dialog -->
-            <p:dialog widgetVar="addUserGroupDialog"
-                      header="#{msgs.userGroupsAdd}"
+            <p:dialog widgetVar="addProjectDialog"
+                      header="#{msgs.addProjects}"
                       width="700px"
                       modal="true"
                       dynamic="true">
-                <h:form id="userGroupForm">
+                <h:form id="userProjectForm">
                     <p:dataTable var="item"
-                                 value="#{BenutzergruppenForm.lazyDTOModel}"
+                                 value="#{ProjekteForm.lazyDTOModel}"
                                  lazy="true"
                                  paginator="true"
                                  rows="#{LoginForm.myBenutzer.tableSize}"
                                  paginatorPosition="bottom">
-                        <p:column headerText="#{msgs.userGroup}">
+                        <p:column headerText="#{msgs.projectList}">
                             <h:outputText value="#{item.title}"/>
                         </p:column>
                         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-                            <p:commandLink id="addUserGroup"
-                                           action="#{BenutzerverwaltungForm.addToGroup}"
-                                           title="add to user group"
-                                           update="editForm:userTabView:usergroupDatatable"
+                            <p:commandLink id="addUserProject"
+                                           action="#{BenutzerverwaltungForm.addToProject}"
+                                           title="add to project"
+                                           update="editForm:userTabView:projectDatatable"
                                            oncomplete="jQuery('#editForm\\:saveButtonToggler').click()">
                                 <i class="fa fa-user-plus fa-lg"/>
                                 <f:param name="ID" value="#{item.id}"/>
