--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/comment.xhtml
@@ -15,5 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
-    <h:outputText value="Lorem ipsum"/>
+    <p:panel id="commentWrapperPanel" styleClass="wrapperPanel">
+        <h:outputText value="Lorem ipsum"/>
+    </p:panel>
 </ui:composition>
