--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -15,120 +15,121 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
+    <p:panel id="galleryWrapperPanel" styleClass="wrapperPanel">
 
-    <h:form id="imagePreviewForm" style="height: 100%">
-        <span id="imageData" data-image="#{Metadaten.currentImage}"/>
-        <p:panelGrid id="imageControlPanel" columns="3" style="right: 17px; top: 9px; position: absolute;">
-            <p:column>
-                <p:commandButton id="listViewButton"
-                                 update="imagePreviewForm galleryHeadingWrapper"
-                                 icon="fa fa-list"
-                                 styleClass="#{Metadaten.viewMode eq 'list' ? 'active' : 'inactive'}">
-                    <f:setPropertyActionListener value="list" target="#{Metadaten.viewMode}"/>
-                </p:commandButton>
-            </p:column>
-            <p:column>
-                <p:commandButton id="gridViewButton"
-                                 update="imagePreviewForm galleryHeadingWrapper"
-                                 icon="fa fa-th-large"
-                                 styleClass="#{Metadaten.viewMode eq 'grid' ? 'active' : 'inactive'}">
-                    <f:setPropertyActionListener value="grid" target="#{Metadaten.viewMode}"/>
-                </p:commandButton>
-            </p:column>
-            <p:column>
-                <p:commandButton id="previewButton"
-                                 update="imagePreviewForm galleryHeadingWrapper"
-                                 icon="fa fa-image"
-                                 styleClass="#{Metadaten.viewMode eq 'preview' ? 'active' : 'inactive'}">
-                    <f:setPropertyActionListener value="preview" target="#{Metadaten.viewMode}"/>
-                </p:commandButton>
-            </p:column>
-        </p:panelGrid>
+        <h:form id="imagePreviewForm" style="height: 100%">
+            <span id="imageData" data-image="#{Metadaten.currentImage}"/>
+            <p:panelGrid id="imageControlPanel" columns="3" style="right: 17px; top: 9px; position: absolute;">
+                <p:column>
+                    <p:commandButton id="listViewButton"
+                                     update="imagePreviewForm galleryHeadingWrapper"
+                                     icon="fa fa-list"
+                                     styleClass="#{Metadaten.viewMode eq 'list' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="list" target="#{Metadaten.viewMode}"/>
+                    </p:commandButton>
+                </p:column>
+                <p:column>
+                    <p:commandButton id="gridViewButton"
+                                     update="imagePreviewForm galleryHeadingWrapper"
+                                     icon="fa fa-th-large"
+                                     styleClass="#{Metadaten.viewMode eq 'grid' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="grid" target="#{Metadaten.viewMode}"/>
+                    </p:commandButton>
+                </p:column>
+                <p:column>
+                    <p:commandButton id="previewButton"
+                                     update="imagePreviewForm galleryHeadingWrapper"
+                                     icon="fa fa-image"
+                                     styleClass="#{Metadaten.viewMode eq 'preview' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="preview" target="#{Metadaten.viewMode}"/>
+                    </p:commandButton>
+                </p:column>
+            </p:panelGrid>
 
-        <p:panel>
-            <p:outputLabel for="tifFolders" value="#{msgs.aktuellerOrdner}" style="vertical-align: top"/>
-            <p:selectOneMenu id="tifFolders" value="#{Metadaten.currentTifFolder}" converter="#{URIConverter}" style="margin: 0 5px">
-                <f:selectItem value="#{null}" itemLabel="Please select a tiff folder!" noSelectionOption="true"/>
-                <f:selectItems value="#{Metadaten.allTifFolders}"/>
-                <f:ajax listener="#{Metadaten.updateImagesFolder()}"/>
-            </p:selectOneMenu>
-            <p:commandButton id="readImagesButton" value="#{msgs.generatePNGs}"
-                             action="#{Metadaten.generatePNGs()}"
-                             style="vertical-align: top">
-                <p:confirm header="#{msgs.generatePNGs}"
-                           message="#{msgs.confirm}"
-                           icon="ui-icon-alert"/>
-            </p:commandButton>
-        </p:panel>
+            <p:panel>
+                <p:outputLabel for="tifFolders" value="#{msgs.aktuellerOrdner}" style="vertical-align: top"/>
+                <p:selectOneMenu id="tifFolders" value="#{Metadaten.currentTifFolder}" converter="#{URIConverter}" style="margin: 0 5px">
+                    <f:selectItem value="#{null}" itemLabel="Please select a tiff folder!" noSelectionOption="true"/>
+                    <f:selectItems value="#{Metadaten.allTifFolders}"/>
+                    <f:ajax listener="#{Metadaten.updateImagesFolder()}"/>
+                </p:selectOneMenu>
+                <p:commandButton id="readImagesButton" value="#{msgs.generatePNGs}"
+                                 action="#{Metadaten.generatePNGs()}"
+                                 style="vertical-align: top">
+                    <p:confirm header="#{msgs.generatePNGs}"
+                               message="#{msgs.confirm}"
+                               icon="ui-icon-alert"/>
+                </p:commandButton>
+            </p:panel>
 
-        <!-- Pages in structured view -->
-        <ui:fragment rendered="#{Metadaten.viewMode eq 'list'}">
-            <p:fieldset id="structuredPagesField" legend="Structured Pages">
-                <p:dataList id="structuredPages"
-                            var="structureElement"
-                            value="#{Metadaten.allStructureElements}"
-                            type="definition"
-                            binding="#{currentElement}">
-                    <h:outputText value="#{structureElement.getDocStructType().getNameByLanguage(SpracheForm.locale)}" style="font-weight: bold;"/>
-                    <p:dataList styleClass="structureElementDataList"
-                                id="structureElementDataList"
-                                var="page"
-                                value="#{Metadaten.getPageReferencesToDocStruct(structureElement)}"
-                                binding="#{structuredThumbnail}">
-                        <ui:param name="filePath" value="#{Metadaten.getPageImageFilePath(page)}"/>
-                        <p:panel id="structuredPagePanel" header="#{msgs.page} #{Metadaten.getPhysicalPageNumber(page)}">
-                            <p:commandLink update="structureTreeForm, imagePreviewForm" rendered="#{Metadaten.isAccessGranted(filePath)}">
-                                <img src="#{Metadaten.getThumbnail(filePath)}" class="thumbnail #{Metadaten.currentImage eq filePath ? 'active' : ''}"/>
-                                <f:setPropertyActionListener value="#{filePath}" target="#{Metadaten.currentImage}"/>
-                                <f:setPropertyActionListener value="#{page}" target="#{Metadaten.myStrukturelement}"/>
-                            </p:commandLink>
-                        </p:panel>
-                        <p:draggable id="structuredPagesDraggable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList:#{structuredThumbnail.rowIndex}:structuredPagePanel"
-                                     revert="true" stack=".ui-panel"/>
+            <!-- Pages in structured view -->
+            <ui:fragment rendered="#{Metadaten.viewMode eq 'list'}">
+                <p:fieldset id="structuredPagesField" legend="Structured Pages">
+                    <p:dataList id="structuredPages"
+                                var="structureElement"
+                                value="#{Metadaten.allStructureElements}"
+                                type="definition"
+                                binding="#{currentElement}">
+                        <h:outputText value="#{structureElement.getDocStructType().getNameByLanguage(SpracheForm.locale)}" style="font-weight: bold;"/>
+                        <p:dataList styleClass="structureElementDataList"
+                                    id="structureElementDataList"
+                                    var="page"
+                                    value="#{Metadaten.getPageReferencesToDocStruct(structureElement)}"
+                                    binding="#{structuredThumbnail}">
+                            <ui:param name="filePath" value="#{Metadaten.getPageImageFilePath(page)}"/>
+                            <p:panel id="structuredPagePanel" header="#{msgs.page} #{Metadaten.getPhysicalPageNumber(page)}">
+                                <p:commandLink update="structureTreeForm, imagePreviewForm" rendered="#{Metadaten.isAccessGranted(filePath)}">
+                                    <img src="#{Metadaten.getThumbnail(filePath)}" class="thumbnail #{Metadaten.currentImage eq filePath ? 'active' : ''}"/>
+                                    <f:setPropertyActionListener value="#{filePath}" target="#{Metadaten.currentImage}"/>
+                                    <f:setPropertyActionListener value="#{page}" target="#{Metadaten.myStrukturelement}"/>
+                                </p:commandLink>
+                            </p:panel>
+                            <p:draggable id="structuredPagesDraggable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList:#{structuredThumbnail.rowIndex}:structuredPagePanel"
+                                         revert="true" stack=".ui-panel"/>
+                        </p:dataList>
+                        <p:droppable id="structuredPagesDroppable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList">
+                            <p:ajax listener="#{Metadaten.onPageDrop}" update="imagePreviewForm, structureTreeForm:docStruct"/>
+                        </p:droppable>
                     </p:dataList>
-                    <p:droppable id="structuredPagesDroppable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList">
-                        <p:ajax listener="#{Metadaten.onPageDrop}" update="imagePreviewForm, structureTreeForm:docStruct"/>
-                    </p:droppable>
-                </p:dataList>
-            </p:fieldset>
-        </ui:fragment>
+                </p:fieldset>
+            </ui:fragment>
 
-        <!-- Pages in UNstructured view -->
-        <ui:fragment rendered="#{Metadaten.viewMode eq 'grid'}">
-            <div class="thumbnailWrapper">
-                <ui:repeat value="#{Metadaten.images}" var="image">
-                    <p:commandLink update="imagePreviewForm" rendered="#{Metadaten.isAccessGranted(image)}">
-                        <img class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
-                        <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
-                    </p:commandLink>
-                    <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
-                    <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
-                </ui:repeat>
-            </div>
-        </ui:fragment>
-
-        <!-- View current page with OpenLayers -->
-        <ui:fragment rendered="#{Metadaten.viewMode eq 'preview'}">
-            <!-- OpenLayers Kitodo custom controls -->
-            <div id="olWrapper" style="overflow-x: auto; height: 100%">
-                <div id="thumbnailStripe" style="width: 10%; display: inline-block; float: right">
+            <!-- Pages in UNstructured view -->
+            <ui:fragment rendered="#{Metadaten.viewMode eq 'grid'}">
+                <div class="thumbnailWrapper">
                     <ui:repeat value="#{Metadaten.images}" var="image">
-                        <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
-                            <img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
+                        <p:commandLink update="imagePreviewForm" rendered="#{Metadaten.isAccessGranted(image)}">
+                            <img class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
                             <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
                         </p:commandLink>
                         <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
                         <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
                     </ui:repeat>
                 </div>
-                <ui:fragment rendered="#{Metadaten.isAccessGranted(Metadaten.currentImage)}">
-                    <h:outputStylesheet name="webjars/openlayers/4.5.0/ol.css"/>
-                    <h:outputScript name="js/ol_custom.js"/>
-                    <div id="map" class="map" style="width: 85%; height: 100%; display: inline-block; float: left"/>
-                </ui:fragment>
-            </div>
-        </ui:fragment>
+            </ui:fragment>
 
-    </h:form>
+            <!-- View current page with OpenLayers -->
+            <ui:fragment rendered="#{Metadaten.viewMode eq 'preview'}">
+                <!-- OpenLayers Kitodo custom controls -->
+                <div id="olWrapper" style="overflow-x: auto; height: 100%">
+                    <div id="thumbnailStripe" style="width: 10%; display: inline-block; float: right">
+                        <ui:repeat value="#{Metadaten.images}" var="image">
+                            <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
+                                <img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
+                                <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
+                            </p:commandLink>
+                            <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
+                            <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
+                        </ui:repeat>
+                    </div>
+                    <ui:fragment rendered="#{Metadaten.isAccessGranted(Metadaten.currentImage)}">
+                        <h:outputStylesheet name="webjars/openlayers/4.5.0/ol.css"/>
+                        <h:outputScript name="js/ol_custom.js"/>
+                        <div id="map" class="map" style="width: 85%; height: 100%; display: inline-block; float: left"/>
+                    </ui:fragment>
+                </div>
+            </ui:fragment>
 
+        </h:form>
+    </p:panel>
 </ui:composition>
