--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -18,7 +18,7 @@
     <p:panel id="galleryWrapperPanel" styleClass="wrapperPanel">
 
         <h:form id="imagePreviewForm" style="height: 100%">
-            <span id="imageData" data-image="#{Metadaten.currentImage}"/>
+            <span id="imageData" data-image="#{request.contextPath}#{Metadaten.currentImage}"/>
             <p:panelGrid id="imageControlPanel" columns="3" style="right: 17px; top: 9px; position: absolute;">
                 <p:column>
                     <p:commandButton id="listViewButton"
@@ -77,9 +77,9 @@
                                     value="#{Metadaten.getPageReferencesToDocStruct(structureElement)}"
                                     binding="#{structuredThumbnail}">
                             <ui:param name="filePath" value="#{Metadaten.getPageImageFilePath(page)}"/>
-                            <p:panel id="structuredPagePanel" header="#{msgs.page} #{Metadaten.getPhysicalPageNumber(page)}">
-                                <p:commandLink update="structureTreeForm, imagePreviewForm" rendered="#{Metadaten.isAccessGranted(filePath)}">
-                                    <img src="#{Metadaten.getThumbnail(filePath)}" class="thumbnail #{Metadaten.currentImage eq filePath ? 'active' : ''}"/>
+                            <p:panel id="structuredPagePanel" header="#{msgs.page} #{Metadaten.getPhysicalPageNumber(page)}" rendered="#{Metadaten.isAccessGranted(filePath)}">
+                                <p:commandLink update="structureTreeForm, imagePreviewForm">
+                                    <img src="#{request.contextPath}#{Metadaten.getThumbnail(filePath)}" class="thumbnail #{Metadaten.currentImage eq filePath ? 'active' : ''}"/>
                                     <f:setPropertyActionListener value="#{filePath}" target="#{Metadaten.currentImage}"/>
                                     <f:setPropertyActionListener value="#{page}" target="#{Metadaten.myStrukturelement}"/>
                                 </p:commandLink>
@@ -99,7 +99,7 @@
                 <div class="thumbnailWrapper">
                     <ui:repeat value="#{Metadaten.images}" var="image">
                         <p:commandLink update="imagePreviewForm" rendered="#{Metadaten.isAccessGranted(image)}">
-                            <img class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
+                            <img class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/>
                             <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
                         </p:commandLink>
                         <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
@@ -115,7 +115,7 @@
                     <div id="thumbnailStripe" style="width: 10%; display: inline-block; float: right">
                         <ui:repeat value="#{Metadaten.images}" var="image">
                             <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
-                                <img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{Metadaten.getThumbnail(image)}"/>
+                                <img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/>
                                 <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
                             </p:commandLink>
                             <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
