Hide unnecessary header text on metadata editor gallery

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -64,7 +64,7 @@
 
             <!-- Pages in structured view -->
             <ui:fragment rendered="#{Metadaten.viewMode eq 'list'}">
-                <p:fieldset id="structuredPagesField" legend="Structured Pages">
+                <p:fieldset id="structuredPagesField">
                     <p:dataList id="structuredPages"
                                 var="structureElement"
                                 value="#{Metadaten.allStructureElements}"
