Replace deprecated 'autoUpdate' attribute with corresponding component

--- a/Kitodo/src/main/webapp/WEB-INF/templates/baseEditView.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/baseEditView.xhtml
@@ -24,7 +24,9 @@
                         <h3>Kitodo.Production</h3>
                     </ui:insert>
                 </p:panel>
-                <p:messages id="error-messages" autoUpdate="true" />
+                <p:messages id="error-messages">
+                    <p:autoUpdate/>
+                </p:messages>
 
                 <ui:insert name="pageTabView">
                     <p:tabView/>
